[package]
name = "py-sourcemap"
version = "0.1.3-alpha.0"
authors = ["LongYinan <lynweklm@gmail.com>"]
publish = false

[lib]
name = "py_sourcemap"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version="0.4", features=["extension-module"] }
source-map-mappings = { version="0.5" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
